[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/levels.gd" type="Script" id=1]
[ext_resource path="res://assets/theme.theme" type="Theme" id=2]
[ext_resource path="res://scripts/border.gd" type="Script" id=3]

[node name="Viewport" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelect" type="HBoxContainer" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 1890.0
margin_bottom = 1050.0
script = ExtResource( 1 )

[node name="LevelsBorder" type="MarginContainer" parent="LevelSelect"]
margin_right = 480.0
margin_bottom = 1020.0
rect_min_size = Vector2( 480, 0 )
script = ExtResource( 3 )

[node name="Levels" type="VBoxContainer" parent="LevelSelect/LevelsBorder"]
margin_left = 20.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 1000.0

[node name="Preview" type="VBoxContainer" parent="LevelSelect"]
margin_left = 488.0
margin_right = 1860.0
margin_bottom = 1020.0
size_flags_horizontal = 3

[node name="Display" type="MarginContainer" parent="LevelSelect/Preview"]
margin_right = 1372.0
margin_bottom = 640.0
rect_min_size = Vector2( 0, 640 )
script = ExtResource( 3 )

[node name="Placeholder" type="Control" parent="LevelSelect/Preview/Display"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1352.0
margin_bottom = 620.0

[node name="InfoBorder" type="MarginContainer" parent="LevelSelect/Preview"]
margin_top = 648.0
margin_right = 1372.0
margin_bottom = 1020.0
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Info" type="Label" parent="LevelSelect/Preview/InfoBorder"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1352.0
margin_bottom = 352.0
size_flags_vertical = 1
autowrap = true

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="timeout" from="Timer" to="LevelSelect" method="_on_Timer_timeout"]
